Renaming coop_account.tax_version with account.tax.description.version

--- a/modules/coop_account/locale/fr_FR.po
+++ b/modules/coop_account/locale/fr_FR.po
@@ -166,55 +166,55 @@ msgctxt "field:account.tax.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:coop_account.tax_version,create_date:"
+msgctxt "field:account.tax.description.version,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:coop_account.tax_version,create_date_:"
+msgctxt "field:account.tax.description.version,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:coop_account.tax_version,create_uid:"
+msgctxt "field:account.tax.description.version,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:coop_account.tax_version,end_date:"
+msgctxt "field:account.tax.description.version,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
 
-msgctxt "field:coop_account.tax_version,id:"
+msgctxt "field:account.tax.description.version,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:coop_account.tax_version,kind:"
+msgctxt "field:account.tax.description.version,kind:"
 msgid "Rating mode"
 msgstr "Type"
 
-msgctxt "field:coop_account.tax_version,main_elem:"
+msgctxt "field:account.tax.description.version,main_elem:"
 msgid "Descriptor"
 msgstr "Descripteur"
 
-msgctxt "field:coop_account.tax_version,must_expand_tree:"
+msgctxt "field:account.tax.description.version,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:coop_account.tax_version,rec_name:"
+msgctxt "field:account.tax.description.version,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:coop_account.tax_version,start_date:"
+msgctxt "field:account.tax.description.version,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
 
-msgctxt "field:coop_account.tax_version,value:"
+msgctxt "field:account.tax.description.version,value:"
 msgid "Value"
 msgstr "Valeur"
 
-msgctxt "field:coop_account.tax_version,write_date:"
+msgctxt "field:account.tax.description.version,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:coop_account.tax_version,write_uid:"
+msgctxt "field:account.tax.description.version,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -230,7 +230,7 @@ msgctxt "model:account.tax.description,name:"
 msgid "Tax Descriptor"
 msgstr "Descripteur de Taxe"
 
-msgctxt "model:coop_account.tax_version,name:"
+msgctxt "model:account.tax.description.version,name:"
 msgid "Tax Version"
 msgstr "Version de Taxe"
 
@@ -262,15 +262,15 @@ msgctxt "selection:account.fee.description.version,kind:"
 msgid "Rate"
 msgstr "Taux"
 
-msgctxt "selection:coop_account.tax_version,kind:"
+msgctxt "selection:account.tax.description.version,kind:"
 msgid "Flat"
 msgstr "Fixe"
 
-msgctxt "selection:coop_account.tax_version,kind:"
+msgctxt "selection:account.tax.description.version,kind:"
 msgid "Rate"
 msgstr "Taux"
 
-msgctxt "selection:coop_account.tax_version,kind:"
+msgctxt "selection:account.tax.description.version,kind:"
 msgid "Rule"
 msgstr "Règle"
 
@@ -286,6 +286,6 @@ msgctxt "view:account.tax.description:"
 msgid "Tax Descriptor"
 msgstr "Taxe"
 
-msgctxt "view:coop_account.tax_version:"
+msgctxt "view:account.tax.description.version:"
 msgid "Tax Version"
 msgstr "Version de Taxe"
