--- a/modules/coop_account/locale/fr_FR.po
+++ b/modules/coop_account/locale/fr_FR.po
@@ -6,7 +6,7 @@ msgctxt "error:account.fee.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
-msgctxt "error:coop_account.tax_desc:"
+msgctxt "error:account.tax.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
@@ -114,55 +114,55 @@ msgctxt "field:account.fee.description.version,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:coop_account.tax_desc,code:"
+msgctxt "field:account.tax.description,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:coop_account.tax_desc,create_date:"
+msgctxt "field:account.tax.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:coop_account.tax_desc,create_date_:"
+msgctxt "field:account.tax.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:coop_account.tax_desc,create_uid:"
+msgctxt "field:account.tax.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:coop_account.tax_desc,current_rec_name:"
+msgctxt "field:account.tax.description,current_rec_name:"
 msgid "Current Value"
 msgstr "Valeur Courante"
 
-msgctxt "field:coop_account.tax_desc,description:"
+msgctxt "field:account.tax.description,description:"
 msgid "Description"
 msgstr "Description"
 
-msgctxt "field:coop_account.tax_desc,id:"
+msgctxt "field:account.tax.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:coop_account.tax_desc,must_expand_tree:"
+msgctxt "field:account.tax.description,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:coop_account.tax_desc,name:"
+msgctxt "field:account.tax.description,name:"
 msgid "Tax Name"
 msgstr "Nom"
 
-msgctxt "field:coop_account.tax_desc,rec_name:"
+msgctxt "field:account.tax.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:coop_account.tax_desc,versions:"
+msgctxt "field:account.tax.description,versions:"
 msgid "Versions"
 msgstr "Versions"
 
-msgctxt "field:coop_account.tax_desc,write_date:"
+msgctxt "field:account.tax.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:coop_account.tax_desc,write_uid:"
+msgctxt "field:account.tax.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -226,7 +226,7 @@ msgctxt "model:account.fee.description.version,name:"
 msgid "Fee Version"
 msgstr "Version de Frais"
 
-msgctxt "model:coop_account.tax_desc,name:"
+msgctxt "model:account.tax.description,name:"
 msgid "Tax Descriptor"
 msgstr "Descripteur de Taxe"
 
@@ -282,7 +282,7 @@ msgctxt "view:account.fee.description.version:"
 msgid "Fee Version"
 msgstr "Version"
 
-msgctxt "view:coop_account.tax_desc:"
+msgctxt "view:account.tax.description:"
 msgid "Tax Descriptor"
 msgstr "Taxe"
 
