--- a/modules/coop_party/locale/fr_FR.po
+++ b/modules/coop_party/locale/fr_FR.po
@@ -170,83 +170,83 @@ msgctxt "field:party.address.kind,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:party.contact_history,address:"
+msgctxt "field:party.interaction,address:"
 msgid "Address"
 msgstr "Adresse"
 
-msgctxt "field:party.contact_history,attachment:"
+msgctxt "field:party.interaction,attachment:"
 msgid "Attachment"
 msgstr "Pièce jointe"
 
-msgctxt "field:party.contact_history,comment:"
+msgctxt "field:party.interaction,comment:"
 msgid "Comment"
 msgstr "Commentaire"
 
-msgctxt "field:party.contact_history,contact_datetime:"
+msgctxt "field:party.interaction,contact_datetime:"
 msgid "Date and Time"
 msgstr "Date et Heure"
 
-msgctxt "field:party.contact_history,contact_mechanism:"
+msgctxt "field:party.interaction,contact_mechanism:"
 msgid "Contact Mechanism"
 msgstr "Moyen de contact"
 
-msgctxt "field:party.contact_history,create_date:"
+msgctxt "field:party.interaction,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:party.contact_history,create_date_:"
+msgctxt "field:party.interaction,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:party.contact_history,create_uid:"
+msgctxt "field:party.interaction,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:party.contact_history,for_object:"
+msgctxt "field:party.interaction,for_object:"
 msgid "For Object"
 msgstr "Pour l'Objet"
 
-msgctxt "field:party.contact_history,for_object_ref:"
+msgctxt "field:party.interaction,for_object_ref:"
 msgid "For Object"
 msgstr "Pour l'Objet"
 
-msgctxt "field:party.contact_history,id:"
+msgctxt "field:party.interaction,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:party.contact_history,media:"
+msgctxt "field:party.interaction,media:"
 msgid "Media"
 msgstr ""
 
-msgctxt "field:party.contact_history,must_expand_tree:"
+msgctxt "field:party.interaction,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:party.contact_history,party:"
+msgctxt "field:party.interaction,party:"
 msgid "Actor"
 msgstr "Acteur"
 
-msgctxt "field:party.contact_history,rec_name:"
+msgctxt "field:party.interaction,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:party.contact_history,title:"
+msgctxt "field:party.interaction,title:"
 msgid "Title"
 msgstr "Titre"
 
-msgctxt "field:party.contact_history,user:"
+msgctxt "field:party.interaction,user:"
 msgid "User"
 msgstr "Utilisateur"
 
-msgctxt "field:party.contact_history,user_name:"
+msgctxt "field:party.interaction,user_name:"
 msgid "User Name"
 msgstr "Gestionnaire"
 
-msgctxt "field:party.contact_history,write_date:"
+msgctxt "field:party.interaction,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:party.contact_history,write_uid:"
+msgctxt "field:party.interaction,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -490,7 +490,7 @@ msgctxt "model:party.address.kind,name:"
 msgid "Addresse Kind"
 msgstr "Type d'Adresse"
 
-msgctxt "model:party.contact_history,name:"
+msgctxt "model:party.interaction,name:"
 msgid "Contact History"
 msgstr "Historique des Contacts"
 
@@ -502,51 +502,51 @@ msgctxt "model:party.party_relation_kind,name:"
 msgid "Party Relation Kind"
 msgstr "Type de Relation entre Acteurs"
 
-msgctxt "selection:party.contact_history,for_object_ref:"
+msgctxt "selection:party.interaction,for_object_ref:"
 msgid "Party"
 msgstr "Acteur"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "E-Mail"
 msgstr "E-Mail"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Fax"
 msgstr "Fax"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "IRC"
 msgstr "IRC"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Jabber"
 msgstr "Jabber"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Mail"
 msgstr "Courrier"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Mobile"
 msgstr "Mobile"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Other"
 msgstr "Autre"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Phone"
 msgstr "Téléphone"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "SIP"
 msgstr "SIP"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Skype"
 msgstr "Skype"
 
-msgctxt "selection:party.contact_history,media:"
+msgctxt "selection:party.interaction,media:"
 msgid "Website"
 msgstr "Site web"
 
@@ -566,7 +566,7 @@ msgctxt "view:party.actor:"
 msgid "Roles"
 msgstr "Rôles"
 
-msgctxt "view:party.contact_history:"
+msgctxt "view:party.interaction:"
 msgid "Communication Log"
 msgstr "Historique des Contacts"
 
